--- a/DevClub_Store/templates/home.html
+++ b/DevClub_Store/templates/home.html
@@ -26,7 +26,7 @@
                         AMOLED de alta resolução e bateria de longa duração. Perfeito para acompanhar seu estilo de vida
                         ativo.
                     </p>
-                    <button class="btn">Saiba Mais</button>
+                    <button class="btn" type="submit">Saiba Mais</button>
                 </div>
             </div>
 
