--- a/DevClub_Store/templates/nav.html
+++ b/DevClub_Store/templates/nav.html
@@ -1,7 +1,8 @@
 <header>
     <div class="logo">DevClub Store</div>
     <nav>
-        <ul>
+        <button class="botao-menu">☰</button>
+        <ul class="menu">
             <li>Home</li>
             <li>Produtos</li>
             <li>Contatos</li>
