--- a/DevClub_Store/templates/base.html
+++ b/DevClub_Store/templates/base.html
@@ -19,5 +19,6 @@
     {% block body %}
     {% endblock %}
 
+    <script src="{{ url_for('static', filename='scripts/script_base.js') }}"></script>
 </body>
 </html>
